# prezzy

./: .gitignore  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  RELEASE.md
.cargo/: config.toml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md  format_request.md
.github/workflows/: ci.yml  release.yml
demo/samples/: api.json  changes.diff  config.env  error.txt  logs.ndjson  team.csv
dev-files/: test-history.sh  test-pipe-mode.sh  test-shell-mode.sh
packaging/homebrew/: prezzy.rb
packaging/npm/: install.js  package.json  run.js
src/: lib.rs  main.rs
src/cli/: mod.rs
src/config/: mod.rs
src/detect/: csv.rs  diff.rs  json.rs  kv.rs  log.rs  markdown.rs  mod.rs  ndjson.rs  plain.rs  stacktrace.rs  xml.rs  yaml.rs
src/history/: db.rs  mod.rs
src/input/: mod.rs
src/render/: csv.rs  diff.rs  json.rs  kv.rs  log.rs  markdown.rs  mod.rs  ndjson.rs  plain.rs  stacktrace.rs  xml.rs  yaml.rs
src/shell/: beautify.rs  inject.rs  io.rs  mod.rs  parser.rs  pty.rs
src/terminal/: color.rs  mod.rs
src/theme/: mod.rs
tests/: cli.rs
tests/fixtures/csv/: data.csv
tests/fixtures/diff/: simple.patch
tests/fixtures/json/: array.json  nested.json  simple_object.json
tests/fixtures/markdown/: readme.md
tests/fixtures/plain/: hello.txt
tests/fixtures/stacktrace/: javascript.txt  python.txt  rust.txt
tests/fixtures/xml/: config.xml
tests/fixtures/yaml/: config.yaml
